--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,13 @@
 
     </include>
 
-    <example.com.meetingselectdemo.MeetingMapView
+    <!--<Button-->
+        <!--android:id="@+id/seat_button"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="随机分配"/>-->
+
+        <example.com.meetingselectdemo.MeetingMapView
         android:id="@+id/seatView"
         android:background="#ffffff"
         android:gravity="center"
