--- a/app/src/main/res/drawable/people_select.xml
+++ b/app/src/main/res/drawable/people_select.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/select" android:state_checked="true" /><!--选中时效果-->
-    <item android:drawable="@drawable/unselect" android:state_checked="false" /><!--未选中时效果-->
+    <item android:drawable="@mipmap/select" android:state_checked="true" /><!--选中时效果-->
+    <item android:drawable="@mipmap/unselect" android:state_checked="false" /><!--未选中时效果-->
     <!-- 修改成你自己的图片就可以了 -->
 </selector>
